Test Org - Speridian/src/objects/BA_UW_Administration__c.object
<CustomObject>
    <fields>
        <fullName>ba_DataType__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_UW_Question_Header__c</fullName>
        <label>UW Question Header</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_UW_Question_Name__c</fullName>
        <label>UW Question Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_UW_Question__c</fullName>
        <label>UW Question</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Group UW Question Administration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UW-{0000}</displayFormat>
        <label>UW Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group UW Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>